--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -33,6 +33,7 @@ body {
   flex-direction: column;
   min-width: 320px;
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body{
